kubernetes/deployment-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: fe-demo-app
  name: fe-demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fe-demo-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: fe-demo-app
    spec:
      containers:
      - image: iconsent/fe-demo-app
        name: fe-demo
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: fe-demo-app
  name: fe-demo-app
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: fe-demo-app
  type: LoadBalancer
status:
  loadBalancer: {}
