kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "fe-demo-app-ingress"
  annotations:
    kubernetes.io/ingress.class: "public"
spec:
  rules:
    - host: mk8s.info    
      http:
        paths:
         - path: /
           pathType: ImplementationSpecific
           backend: 
            service: 
              name: fe-demo-app
              port: 
                number: 80
